# paidiverpy

./: .copier-answers.yml  .gitignore  .python-version  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.dev.md  README.md  config.html  config_check.html  configuration-schema.json  environment copy.yml  environment.yml  main.py  project_setup.md  pyproject.toml  script.js  sonar-project.properties
.github/workflows/: build.yml  next_steps.yml  next_steps_citation_issue.md  next_steps_linting_issue.md  next_steps_online_documentation_issue.md  next_steps_sonarcloud_issue.md  next_steps_zenodo_issue.md
docs/: Makefile  conf.py  index.rst  make.bat
docs/temp_docs/: config_check.html
docs/temp_html/: config.html  script.js
examples/: config.yaml
examples/config_files/: config_1.yaml  config_benthic.yaml  config_benthic2.yaml  config_benthic_dask.yaml  config_benthic_ifdo.yaml  config_benthic_test_steps.yaml  config_jen.yaml  config_jen2.yaml  config_jen_dask.yaml  config_mojtaba.yaml  config_pelagic.yaml  config_simple.yaml
examples/config_files_old/: config_1.yaml  config_dask.yaml  config_jen.yaml  config_jen2.yaml  config_jen_dask.yaml  config_loic_ERROR.yaml  config_mojtaba.yaml
examples/example_notebooks/: Untitled.ipynb  config_catalog_example.ipynb  new_config.yaml  new_config_pelagic.yaml  panel_dashboard.ipynb  panel_dashboard2.ipynb  pipeline.ipynb  pipeline_dask.ipynb  pipeline_generation.ipynb  pipeline_ifdo.ipynb  pipeline_interaction.ipynb  pipeline_testing_steps.ipynb  simple_processing.ipynb
examples/metadata/: KM1808_70_wayptdata.yml  metadata_benthic.csv  metadata_ifdo copy.xlsx  metadata_ifdo.json  metadata_ifdo_hf.json  metadata_ifdo_hf_new.json  metadata_pelagic.csv  metadta_ifdo.xlsx
examples/polygons/: region_polygon.dbf  region_polygon.geojson  region_polygon.shp  region_polygon.shx
paidiverpy/: paidiverpy.py
paidiverpy/config/: config.yaml
paidiverpy/tools/: cvtools.py  general.py
src/: utils.py
src/cli/: main.py
src/paidiverpy/: __init__.py  config.py  data.py  exceptions.py  image_layer.py  images_layer.py  paidiverpy.py  utils.py
src/paidiverpy/catalog_parser/: __init__.py  catalog_parser.py
src/paidiverpy/color_layer/: __init__.py  color_layer.py  params.py
src/paidiverpy/config/: color_params.py  config.py  convert_params.py  pipeline_params.py  position_params.py  resample_params.py
src/paidiverpy/convert_layer/: __init__.py  convert_layer.py  params.py
src/paidiverpy/metadata_parser/: __init__.py  metadata_parser.py
src/paidiverpy/open_layer/: __init__.py  open_layer.py
src/paidiverpy/pipeline/: __init__.py  params.py  pipeline.py
src/paidiverpy/position_layer/: __init__.py  position_layer.py
src/paidiverpy/resample_layer/: __init__.py  params.py  resample_layer.py  resampling_tools.py
src/paidiverpy/size_layer/: __init__.py  size_layer.py
tests/: base_test_class.py  test_1_metoffice_ocean.py  test_2_metoffice_atm.py  test_3_metoffice_innovations.py  test_4_metoffice_main.py  test_my_module.py
tests/mocks/: mock_ftp.py  mock_requests.py
