[build-system]
requires = ["setuptools>=64.0.0", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Paidiverpy"
description = "A library to preprocess image data."
requires-python = ">=3.10"
keywords = ["data", "paidiver", "noc"]
authors = [{email = "tobias.ferreira@noc.ac.uk"},{name = "Tobias Ferreira"}]
maintainers = [{name = "Tobias Ferreira", email = "tobias.ferreira@noc.ac.uk"}]
classifiers = [
  "Programming Language :: Python :: 3",
  "Intended Audience :: Science/Research"
]

dependencies = [
  "numpy>=2.0.0",
  "opencv-python>=4.10.0.84",
  "pandas>=2.2.2",
  "pathlib>=1.0.1",
  "pillow>=10.3.0",
  "scikit-image>=0.24.0",
  "scipy>=1.13.1",
  "tqdm>=4.66.4",
  "PyYAML>=6.0.1",
  "mariqt>=0.6.12",
  "openpyxl>=3.0.9",
  "shapely>=2.0.5",
  "geopy>=2.4.1",
  "graphviz>=0.20.3",
  "geopandas>=1.0.1",
  "panel>=0.12.1",
  ]
license = {file = "LICENSE"}
version = "0.1.0"
readme = {file = "README.md", content-type = "text/markdown"}

[project.optional-dependencies]
dev = [
    "build",  # build is not only used in publishing (below), but also in the template's test suite
    "bump-my-version",
    "coverage [toml]",
    "pytest",
    "pytest-cov",
    "ruff",
    "sphinx",
    "sphinx_rtd_theme",
    "sphinx-autoapi",
    "tox",
    "myst_parser",
]
docs = [
    "sphinx",
    "sphinx_rtd_theme",
    "sphinx-autoapi",
    "myst_parser",
]
publishing = [
    "build",
    "twine",
    "wheel",
]
test = ["pytest >= 7.2.0"]

[project.urls]
Repository = "https://github.com/paidiver/paidiverpy"
Issues = "https://github.com/paidiver/paidiverpy/issues"
Changelog = "https://github.com/paidiver/paidiverpy/CHANGELOG.md"
ReadTheDocs = "https://paidiverpy.readthedocs.io"

[project.scripts]
paidiverpy = "cli.main:main"

[tool.setuptools.dynamic]
version = {attr = "paidiverpy.__init__.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
exclude = ["*__pycache__*"]
namespaces = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["src/paidiverpy"]
command_line = "-m pytest"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py38,py39,py310,py311,py312
skip_missing_interpreters = true
[testenv]
commands = pytest
extras = dev
"""

[tool.ruff]
line-length = 120
output-format = "concise"
extend-exclude = ["docs"]

[tool.ruff.lint]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Enable Pyflakes `E` and `F` codes by default.
select = ["ALL"]
ignore = [
    "ANN101", # Missing type annotation for `self` in method
    "ANN102", # Missing type annotation for `cls` in classmethod
    "ANN204", # Missing return type annotation for special (dunder) method
    "FBT",    # Using boolean function arguments
    "TD",     # TODOs
    "FIX001", # Resolve FIXMEs
    "FIX002", # Resolve TODOs
    "B028",   # No explicit `stacklevel` keyword argument found in warning
    # No docstrings required in the following cases
    "D100", # Missing module docstring
    "D104", # Missing public package docstring
    "D105", # Missing docstring in magic method
    "D107", # Missing docstring in `__init__`
]
pydocstyle.convention = "google"

[tool.ruff.lint.per-file-ignores]
# Tests can ignore a few extra rules
"tests/**.py" = [
    "ANN201", # Missing return type annotation for public function
    "PT011",  # Missing `match` parameter in `pytest.raises()`
    "S101",   # Use of assert is detected
]

[tool.ruff.lint.isort]
known-first-party = ["paidiverpy"]
force-single-line = true
no-lines-before = ["future","standard-library","third-party","first-party","local-folder"]

[tool.bumpversion]
current_version = "0.1.0"

[[tool.bumpversion.files]]
filename = "src/paidiverpy/__init__.py"

[[tool.bumpversion.files]]
filename = "pyproject.toml"

[[tool.bumpversion.files]]
filename = "CITATION.cff"

[[tool.bumpversion.files]]
filename = "docs/conf.py"
